# ents_casting

./: LICENSE  README.md  config.yaml  pyproject.toml
data/measured_data/: data_2023.csv  data_2024.csv
ents_casting/: __main__.py  config.py  generate_forecasts.py  generate_long_term_scenarios.py  init.py
ents_casting/ar_models/: long_term_error.py  short_term_error.py
ents_casting/forecast_models/: demand.py  emission_el.py  lightgbm_model.py  price_el.py  pv_local.py  wind_local.py
ents_casting/meteo_downloaders/: historical_weather.py  historical_weather_forecasts.py
ents_casting/plotting/: plot_forecast_accuracy.py  plot_long_term_scenarios.py  plot_stochastic_forecast.py
ents_casting/residual_error/: fit_residual_error.py  fit_residual_error_long_term.py
ents_casting/weather_forecast_error/: fit_forecast_error.py  historical_forecasting_error.py
